# GSOC-Prep

./: .gitignore  README.md
AndroidCMake/: .gitignore  CMakeCache.txt  README.md  android.toolchain.cmake  install.sh
AndroidLibraryUsage/: README.md  settings.gradle
AndroidLibraryUsage/app/: build.gradle
AndroidLibraryUsage/app/src/main/: AndroidManifest.xml
AndroidLibraryUsage/app/src/main/java/com/androidlibraryusage/: MainActivity.java
AndroidLibraryUsage/app/src/main/res/layout/: activity_main.xml
AndroidLibraryUsage/app/src/main/res/values/: strings.xml
AndroidLibraryUsage/gradle/wrapper/: gradle-wrapper.properties
AndroidLibraryUsage/page/: build.gradle
AndroidLibraryUsage/page/src/main/java/com/javaandroidlibrary/: PageActivity.java
AndroidLibraryUsage/page/src/main/res/layout/: activity_page.xml
AndroidLibraryUsage/page/src/main/res/values/: strings.xml
BuildOpencvAndroid/: .gitignore  README.md  build_sdk.py
BuildVispAndroid/: README.md  android.toolchain.cmake  build_sdk.py  install.sh  ndk-16.config.py  shit.txt  visp
Building OpenCV for android/: android.toolchain.cmake  build_sdk.py
CP/: sol.cpp
CP/stuff/: snippets.cpp  z.py
JNI-Usage-Example/: .gitignore  CMakeLists.txt  MyClass.java  README.md  native.c  native.cpp  native.h  run.sh
JNI-Usage-Example/cpp/: Core.cpp  Gui.cpp  Imgproc.cpp  Imgproc.h  Io.cpp  VpArray2D.cpp  VpArray2D.h  VpCameraParameters.cpp  VpCameraParameters.h  VpColVector.cpp  VpDisplayOpenCV.cpp  VpDisplayOpenCV.h  VpImage.cpp  VpImage.h  VpImageIo.cpp  VpImageIo.h  VpImageRGBa.h  VpImageUChar.h  VpImgproc.cpp  VpImgproc.h  VpMatrix.cpp  VpMatrix.h  VpRowVector.cpp
JNI-Usage-Example/org/visp/core/: Core.java  VpCameraParameters.java  VpColVector.java  VpMatrix.java  VpRowVector.java
JNI-Usage-Example/org/visp/gui/: Gui.java  VpDisplayOpenCV.java
JNI-Usage-Example/org/visp/imgproc/: Imgproc.java  VpImgproc.java
JNI-Usage-Example/org/visp/io/: Io.java  VpImageIo.java
JavaAndroidLibrary/: README.md
JavaAndroidLibrary/app/src/main/: AndroidManifest.xml
JavaAndroidLibrary/gradle/wrapper/: gradle-wrapper.properties
JavaLibraryUsageExample/src/: LibUsageExample.java
MyJavaLibrary/: README.md  build.gradle
MyJavaLibrary/gradle/wrapper/: gradle-wrapper.properties
MyJavaLibrary/src/main/java/example/hello/: HelloWorld.java
MyJavaLibrary/src/test/java/example/hello/: LibraryTest.java
Proposal/: Proposal.docx  proposal.md
SampleCPackage/: CMakeLists.txt  FooConfig.cmake.in  FooConfigVersion.cmake.in  README.md
SampleCPackage/Foo/: CMakeLists.txt  config.h.in  hello.cpp  hello.h
SampleCPackageUsage/: CMakeLists.txt  README.md  main.cpp
VispAndroidDemoApp/: README.md  app-armeabi-v7a-debug.apk
VispAndroidDemoApp/app/: CMakeLists.txt  build.gradle
VispAndroidDemoApp/app/src/main/: AndroidManifest.xml
VispAndroidDemoApp/app/src/main/cpp/: native-lib.cpp
VispAndroidDemoApp/app/src/main/java/example/vispapriltag/: CameraPreview.java  CameraPreviewActivity.java  MainActivity.java
VispAndroidDemoApp/app/src/main/jniLibs/: armeabi-v7a  x86
VispAndroidDemoApp/app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml
VispAndroidDemoApp/gradle/wrapper/: gradle-wrapper.properties
visp-android-demos/AprilTagDetection/: .gitignore  import-summary.txt  settings.gradle
visp-android-demos/AprilTagDetection/VispLibrary320/: build.gradle
visp-android-demos/AprilTagDetection/VispLibrary320/src/main/: AndroidManifest.xml
visp-android-demos/AprilTagDetection/app/: build.gradle
visp-android-demos/AprilTagDetection/app/src/main/: AndroidManifest.xml
visp-android-demos/AprilTagDetection/app/src/main/java/example/apriltagdetection/: CameraPreview.java  CameraPreviewActivity.java  Constants.java  MainActivity.java
visp-android-demos/AprilTagDetection/app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml
visp-android-demos/AprilTagDetection/app/src/main/res/values/: strings.xml
visp-android-demos/AprilTagDetection/gradle/wrapper/: gradle-wrapper.properties
visp-android-demos/HelloVisp/: .gitignore  import-summary.txt  settings.gradle
visp-android-demos/HelloVisp/app/: build.gradle
visp-android-demos/HelloVisp/app/src/main/: AndroidManifest.xml
visp-android-demos/HelloVisp/app/src/main/res/values/: strings.xml
visp-android-demos/HelloVisp/gradle/wrapper/: gradle-wrapper.properties
visp-android-demos/HelloVisp/viSPLibrary320/: lint.xml
visp-android-demos/VispAndroidDemoApp/: README.md
visp-android-demos/VispAndroidDemoApp/app/: CMakeLists.txt  build.gradle
visp-android-demos/VispAndroidDemoApp/app/src/main/: AndroidManifest.xml
visp-android-demos/VispAndroidDemoApp/app/src/main/cpp/: native-lib.cpp
visp-android-demos/VispAndroidDemoApp/app/src/main/java/example/vispapriltag/: CameraPreview.java  CameraPreviewActivity.java  Constants.java  MainActivity.java
visp-android-demos/VispAndroidDemoApp/app/src/main/jniLibs/: x86
visp-android-demos/VispAndroidDemoApp/app/src/main/res/layout/: activity_main.xml
visp-android-demos/VispAndroidDemoApp/app/src/main/res/values/: strings.xml
visp-android-demos/VispAndroidDemoApp/gradle/wrapper/: gradle-wrapper.properties
visp-java-demos/: .classpath  .project  README.md
visp-java-demos/imgproc-swing-demo/src/: Main.java
visp-java-demos/visp-detection-module-demo/: .project
visp-java-demos/visp-detection-module-demo/src/: Main.java
visp-java-demos/visp-gui-module-demo/: .classpath  .project
visp-java-demos/visp-gui-module-demo/src/: Main.java
visp-java-demos/visp-imgproc-module-demo/: .project
visp-java-demos/visp-imgproc-module-demo/src/: Main.java
visp-java-demos/visp-io-module-demo/: .classpath  .project
visp-java-demos/visp-io-module-demo/src/: Main.java
visp-java-demos/vpCore-Demo-Manual/: .classpath  .project
visp-java-demos/vpCore-Demo-Manual/src/: Main.java
visp-java-demos/vpOpenCVDisplay-Demo-Manual/: .classpath  .project
visp-java-demos/vpOpenCVDisplay-Demo-Manual/src/: Main.java
(+15 files in other folders)
